--- a/Notes_Web/index.html
+++ b/Notes_Web/index.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Notes App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button id="btn">
+        <i class="fa-solid fa-plus"></i>
+        Add Note
+    </button>
+    <div id="main">
+        <!-- <div class="note">
+            <div class="tool">
+                <i class="fa-solid fa-floppy-disk"></i>
+                <i class="fa-solid fa-trash"></i>
+            </div>
+            <textarea></textarea>
+        </div> -->
+    </div>
 </body>
+<script src="https://kit.fontawesome.com/50b164fe4b.js" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </html>
