--- a/ToDo List Web/index.html
+++ b/ToDo List Web/index.html
@@ -3,22 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <div class="box">
-            <h3 class="title">Add Our ToDo</h3>
-            <input type="text" id="item" autofocus>
-            <ul id="to-do-box">
-                <li>
-                    Create a Video
-                </li>
-            </ul>
+            <h3 class="title">Add Your To-Do</h3>
+            <input type="text" id="item" autofocus placeholder="Write something here...">
+            <ul id="to-do-box"></ul>
         </div>
     </main>
-    
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
